<resources>
    <string name="app_name">JavaQuizz</string>
    <string name="incorrect_toast">Wrong!</string>
    <string name="correct_toast">You got it!</string>
    <string name="buttonA">A</string>
    <string name="buttonB">B</string>
    <string name="buttonC">C</string>
    <string name="buttonD">D</string>
    <string name="scoreView">Score</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="replay">Replay</string>
    <string name="q1">
        Which of the following option leads to the portability and security of Java?
        <br>\n </br>
        <br>\na. Bytecode is executed by JVM</br>
        <br>\nb. The applet makes the Java code secure and portable</br>
        <br>\nc. Use of exception handling</br>
        <br>\nd. Dynamic binding between objects</br>
    </string>
    <string name="q2">
        Which of the following is not a Java features?
        <br>\n </br>
        <br>\na. Dynamic</br>
        <br>\nb. Architecture Neutral</br>
        <br>\nc. Use of pointers</br>
        <br>\nd. Object-oriented</br>
    </string>
    <string name="q3">
        The \u0021 article referred to as a
        <br>\n </br>
        <br>\na. Unicode escape sequence</br>
        <br>\nb. Octal escape</br>
        <br>\nc. Hexadecimal</br>
        <br>\nd. Line feed</br>
    </string>
    <string name="q4">
         _____ is used to find and fix bugs in the Java programs.
        <br>\n </br>
        <br>\nA - JVM</br>
        <br>\nB - JRE</br>
        <br>\nC - JDK</br>
        <br>\nD - JDB</br>
    </string>
    <string name="q5">
        What is the default encoding for an OutputStreamWriter?
        <br>\n </br>
        <br>\nA - UTF-8</br>
        <br>\nB - Default encoding of the host platform</br>
        <br>\nC - UTF-12</br>
        <br>\nD - None of the above</br>
    </string>
    <string name="q6">
        What is the return type of the hashCode() method in the Object class?
        <br>\n </br>
        <br>\nA - Object</br>
        <br>\nB - int</br>
        <br>\nC - long</br>
        <br>\nD - void</br>
    </string>
    <string name="q7">
        Which of the following is a valid long literal?
        <br>\n </br>
        <br>\nA - ABH8097</br>
        <br>\nB - L990023</br>
        <br>\nC - 904423</br>
        <br>\nD - 0xnf029L</br>
    </string>
    <string name="q8">
        What does the expression float a = 35 / 0 return?
        <br>\n </br>
        <br>\nA - 0</br>
        <br>\nB - Not a Number</br>
        <br>\nC - Infinity</br>
        <br>\nD - Run time exception</br>
    </string>
    <string name="q9">
        Evaluate the following Java expression, if x=3, y=5, and z=10:
        <br>\n++z + y - y + z + x++</br>
        <br>\n </br>
        <br>\nA - 24</br>
        <br>\nB - 23</br>
        <br>\nC - 20</br>
        <br>\nD - 25</br>
    </string>
    <string name="q10">
        Which of the following tool is used to generate API documentation in HTML format from doc comments in source code?
        <br>\n </br>
        <br>\nA - javap tool</br>
        <br>\nB - javaw command</br>
        <br>\nC - Javadoc tool</br>
        <br>\nD - javah command</br>
    </string>
    <string name="q11">
        Which of the following creates a List of 3 visible items and multiple selections abled?
        <br>\n </br>
        <br>\nA - new List(false, 3)</br>
        <br>\nB - new List(3, true)</br>
        <br>\nC - new List(true, 3)</br>
        <br>\nD - ew List(3, false)</br>
    </string>
    <string name="q12">
        Which of the following for loop declaration is not valid?
        <br>\n </br>
        <br>\nA - for ( int i = 99; i >= 0; i / 9 )</br>
        <br>\nB - for ( int i = 7; i     &lt;= 77; i += 7 )</br>
        <br>\nC - for ( int i = 20; i >= 2; - -i )</br>
        <br>\nD - for ( int i = 2; i &lt;= 20; i = 2* i )</br>
    </string>
    <string name="q13">
        Which method of the Class.class is used to determine the name of a class represented by the class object as a String?
        <br> </br>
        <br>\nA - getClass()</br>
        <br>\nB - intern()</br>
        <br>\nC - getName()</br>
        <br>\nD - toString()</br>
    </string>
    <string name="q14">
        In which process, a local variable has the same name as one of the instance variables?
        <br>\n </br>
        <br>\nA - Serialization</br>
        <br>\nB - Variable Shadowing</br>
        <br>\nC - Abstraction</br>
        <br>\nD - Multi-threading</br>
    </string>
    <string name="q15">
        Which of the following is true about the anonymous inner class?
        <br>\n </br>
        <br>\nA - It has only methods</br>
        <br>\nB - Objects can\'t be created</br>
        <br>\nC - It has a fixed class name</br>
        <br>\nD - It has no class name</br>
    </string>
    <string name="q16">
        Which package contains the Random class?
        <br>\n </br>
        <br>\nA - java.util package</br>
        <br>\nB - java.lang package</br>
        <br>\nC - java.awt package</br>
        <br>\nD - java.io package</br>
    </string>
    <string name="q17">
        What do you mean by nameless objects?
        <br>\n </br>
        <br>\nA - An object created by using the new keyword.</br>
        <br>\nB - An object of a superclass created in the subclass.</br>
        <br>\nC - An object without having any name but having a reference.</br>
        <br>\nD - An object that has no reference.</br>
    </string>
    <string name="q18">
        An interface with no fields or methods is known as a ______.
        <br>\n </br>
        <br>\nA - Runnable Interface</br>
        <br>\nB - Marker Interface</br>
        <br>\nC - Abstract Interface</br>
        <br>\nD - CharSequence Interface</br>
    </string>
    <string name="q19">
        Which of the following is an immediate subclass of the Panel class?
        <br>\n </br>
        <br>\nA - Applet class</br>
        <br>\nB - Window class</br>
        <br>\nC - Frame class</br>
        <br>\nD - Dialog class</br>
    </string>
    <string name="q20">
        Which option is false about the final keyword?
        <br>\n </br>
        <br>\nA - A final method cannot be overridden in its subclasses.</br>
        <br>\nB - A final class cannot be extended.</br>
        <br>\nC - A final class cannot extend other classes.</br>
        <br>\nD - A final method can be inherited.</br>
    </string>
    <string name="q21">
        Which of these classes are the direct subclasses of the Throwable class?
        <br>\n </br>
        <br>\nA - RuntimeException and Error class</br>
        <br>\nB - Exception and VirtualMachineError class</br>
        <br>\nC - Error and Exception class</br>
        <br>\nD - IOException and VirtualMachineError class</br>
    </string>
    <string name="q22">
        What do you mean by chained exceptions in Java?
        <br>\n </br>
        <br>\nA - Exceptions occurred by the VirtualMachineError</br>
        <br>\nB - An exception caused by other exceptions</br>
        <br>\nC - Exceptions occur in chains with discarding the debugging information</br>
        <br>\nD - None of the above</br>
    </string>
    <string name="q23">
        In which memory a String is stored, when we create a string using new operator?
        <br>\n </br>
        <br>\nA - Stack</br>
        <br>\nB - String memory</br>
        <br>\nC - Heap memory</br>
        <br>\nD - Random storage space</br>
    </string>
    <string name="q24">
        What is the use of the intern() method?
        <br> </br>
        <br>\nA - It returns the existing string from memory</br>
        <br>\nB - It creates a new string in the database</br>
        <br>\nC - It modifies the existing string in the database</br>
        <br>\nD - None of the above</br>
    </string>
    <string name="q25">
        Which of the following is a marker interface?
        <br>\n </br>
        <br>\nA - Runnable interface</br>
        <br>\nB - Remote interface</br>
        <br>\nC - Readable interface</br>
        <br>\nD - Result interface</br>
    </string>
    <string name="q26">
        Which of the following is a reserved keyword in Java?
        <br>\n </br>
        <br>\nA - object</br>
        <br>\nB - strictfp</br>
        <br>\nC - main</br>
        <br>\nD - system</br>
    </string>
    <string name="q27">
        Which keyword is used for accessing the features of a package?
        <br>\n </br>
        <br>\nA - package</br>
        <br>\nB - import</br>
        <br>\nC - extends</br>
        <br>\nD - export</br>
    </string>
    <string name="q28">
        In java, jar stands for_____.
        <br>\n </br>
        <br>\nA - Java Archive Runner</br>
        <br>\nB - Java Application Resource</br>
        <br>\nC - Java Application Runner</br>
        <br>\nD - None of the above</br>
    </string>
    <string name="q29">
        Which of the following is false?
        <br>\n </br>
        <br>\nA - The rt.jar stands for the runtime jar</br>
        <br>\nB - rt.jar is an optional jar file</br>
        <br>\nC - rt.jar contains all the compiled class files</br>
        <br>\nD - All the classes available in rt.jar is known to the JVM</br>
    </string>
    <string name="q30">
        What is the use of \w in regex?
        <br>\n </br>
        <br>\nA - Used for a whitespace character</br>
        <br>\nB - Used for a non-whitespace character</br>
        <br>\nC - Used for a word character</br>
        <br>\nD - Used for a non-word character</br>
    </string>
    <string name="q31">
        Which of the given methods are of Object class?
        <br>\n </br>
        <br>\nA - notify(), wait( long msecs ), and synchronized()</br>
        <br>\nB - wait( long msecs ), interrupt(), and notifyAll()</br>
        <br>\nC - notify(), notifyAll(), and wait()</br>
        <br>\nD - sleep( long msecs ), wait(), and notify()</br>
    </string>
    <string name="q32">
        Given that Student is a class, how many reference variables and objects are created by the following code?
        <br>\n </br>
        <br><b>\nStudent studentName, studentId;</b></br>
        <br><b>\nstudentName = new Student();</b></br>
        <br><b>\nStudent stud_class = new Student();</b></br>
        <br>\n </br>
        <br>\nA - Three reference variables and two objects are created.</br>
        <br>\nB - Two reference variables and two objects are created.</br>
        <br>\nC - One reference variable and two objects are created.</br>
        <br>\nD - Three reference variables and three objects are created.</br>
    </string>
    <string name="q33">
         Which of the following is a valid syntax to synchronize the HashMap?
        <br>\n </br>
        <br>\nA - Map m = hashMap.synchronizeMap();</br>
        <br>\nB - HashMap map =hashMap.synchronizeMap();</br>
        <br>\nC - Map m1 = Collections.synchronizedMap(hashMap);</br>
        <br>\nD - Map m2 = Collection.synchronizeMap(hashMap);</br>
    </string>
    <string name="q34">
        Given,
        <br><b>\nArrayList list = new ArrayList();</b></br>
        <br> </br>
        \nWhat is the initial quantity of the ArrayList list?
        <br>\n </br>
        <br>\nA - 5</br>
        <br>\nB - 10</br>
        <br>\nC - 0</br>
        <br>\nD - 100</br>
    </string>
    <string name="q35">
        Which of the following is a mutable class in java?
        <br>\n </br>
        <br>\nA - java.lang.String</br>
        <br>\nB - java.lang.Byte</br>
        <br>\nC - java.lang.Short</br>
        <br>\nD - java.lang.StringBuilder</br>
    </string>
    <string name="q36">
        What is meant by the classes and objects that dependents on each other?
        <br>\n </br>
        <br>\nA - Tight Coupling</br>
        <br>\nB - Cohesion</br>
        <br>\nC - Loose Coupling</br>
        <br>\nD - None of the above</br>
    </string>
</resources>